[package]
name = "neko-maid"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17", default-features = false, features = [
  "bevy_core_pipeline",
  "bevy_render",
  "bevy_ui",
  "bevy_ui_render",
  "bevy_text",
  "bevy_asset",
] }
common_macros = "0.1.1"
lazy_static = "1.5.0"
thiserror = "2.0.17"

[dev-dependencies]
pretty_assertions = "1.4.1"
